<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/nav_dashboard"
            android:checked="true" />
        
        <item
            android:id="@+id/nav_security"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/nav_security" />

        <item
            android:id="@+id/nav_update"
            android:icon="@android:drawable/stat_sys_download"
            android:title="@string/nav_update" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
    </group>
</menu>
